http://www.ietf.org/rfc/rfc2256.txt
http://www.ietf.org/rfc/rfc2696.txt

Changes in version 1.2 (X.YY.2007)
-------------------------------------------
A number of API-breaking changes have been made in this release.
Consequently this is NOT a drop-in replacement for Spring LDAP 1.1.2,
though upgrading should not present all that much work. Please see
the supplied upgrade guide for details.

* Upgraded to Spring 2.0.6 internally. Spring 1.2.x is still supported.

Changes in version 1.2-RC1 (5.12.2007)
-------------------------------------------
A number of API-breaking changes have been made in this release,
mainly package restructuring stuff (LDAP-33). Consequently this is
NOT a drop-in replacement for Spring LDAP 1.1.2, though upgrading
should not present all that much work. Please see the supplied
upgrade guide for details.

* Restructured packages (LDAP-33):
  - Moved the core classes into the package ldap.core.
  - Moved subpackages of ldap.support to top level.
  - Moved most classes in ldap.support to ldap.core or ldap.core.support.
  - Moved classes in ldap.utils to ldap.support and removed ldap.utils.

* Changed the exception hierarchy to be an unchecked mirror of the JNDI
  NamingException hierarchy (LDAP-4).

* Deprecated the userName property in AbstractContextSource and changed
  it to the more correct userDn (LDAP-18).

* Fixed bug causing PagedResultsRequestControl processing to fail against AD 
  in the case of a PartialResultsException (LDAP-32).

* Fixed bug causing NullPointerException in some environments when performing
  PagedResultsRequestControl search (LDAP-37).

* Implemented client-side transaction support for Spring LDAP. See reference
  documentation for further information (LDAP-29).

* DirContextAdapter.setAttribute() now properly updates updatedAttrs in update mode
  (resulting in ModificationItems if applicable) (LDAP-15).
  
* Exceptions thrown by Spring LDAP are now always Serializable, regardless of whether